--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/s3-request-presigner": "^3.971.0",
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.13.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
+    "sass-embedded": "^1.97.2",
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
